# gpu-share-vm-manager

./: Cargo.toml  Dockerfile  README.md  deploy.sh
.github/workflows/: build.yml
docs/: platform_support.md
docs/api/: reference.md
kubernetes/: config.yaml  deployment.yaml  service.yaml  storage.yaml
src/: billing.rs  config.rs  lib.rs  macros.rs  main.rs  users.rs  utils.rs
src/api/: error.rs  mod.rs  routes.rs
src/api/middleware/: auth.rs  mod.rs  rate_limit.rs
src/cli/: mod.rs
src/cluster/: mod.rs
src/config/: settings.rs
src/core/: docker_manager.rs  errors.rs  libvirt.rs  mod.rs  resource_manager.rs  vm.rs
src/core/errors/: handlers.rs
src/dashboard/: mod.rs
src/errors/: handlers.rs  mod.rs
src/gpu/: device.rs  mod.rs  passthrough.rs  utils.rs  virtual_gpu.rs
src/monitoring/: anomaly_detection.rs  metrics.rs  mod.rs  prometheus.rs
src/scheduler/: mod.rs
src/utils/: cli.rs  mod.rs  os.rs  platform.rs
tests/: gpu_allocation.rs  live_tests.rs  vm_tests.rs
