[package]
name = "gpu-share-vm-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
virt = "0.4.1"  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"  
async-trait = "0.1"
config = "0.15.6"
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
clap = { version = "4.4", features = ["derive"] }
colored = "3.0"
thiserror = "2.0.11"
chrono = "0.4"
uuid = { version = "1.8.0", features = ["v4"] }

[lib]
name = "gpu_share_vm_manager"
path = "src/lib.rs"

[[bin]]
name = "gpu-share-vm-manager"
path = "src/main.rs"