[package]
name = "gpu-share-vm-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
virt = { version = "0.4.1", features = ["snapshot"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"  
async-trait = "0.1"
config = "0.15.6"
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["limit", "util"] }
tower-http = { version = "0.6.2", features = ["trace", "limit"] }
clap = { version = "4.4", features = ["derive"] }
colored = "3.0"
thiserror = "2.0.11"
chrono = "0.4"
uuid = { version = "1.8.0", features = ["v4"] }
libvirt = "0.1.0"
governor = { version = "0.8.0", features = ["std", "nohashmap"] }

[target.'cfg(target_os = "linux")'.dependencies]
libvirt = "0.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"
metal = { version = "0.31.0", features = ["private"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["dxgi", "d3dcommon"] }
dxgi = "0.1.7"

[lib]
name = "gpu_share_vm_manager"
path = "src/lib.rs"

[[bin]]
name = "gpu-share-vm-manager"
path = "src/main.rs"