[package]
name = "gpu-share-vm-manager"
version = "0.1.0"
edition = "2021"
resolver = "2"
default-run = "gpu-share-vm-manager"

[dependencies]

tokio = { version = "1.36", features = ["full"] }
# virt = "0.4.1" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"  
async-trait = "0.1"
config = "0.15.6"
axum = { version = "0.8.0", features = ["macros"] }
hyper = { version = "0.14.32", features = ["full"] }
tower = { version = "0.5.2", features = ["limit", "util"] }
tower-http = { version = "0.6.2", features = ["trace", "limit", "add-extension"] }
clap = { version = "4.4", features = ["derive"] }
colored = "3.0"
thiserror = "2.0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
governor = { version = "0.8", features = ["dashmap"] }
jsonwebtoken = "9.3.0"
bollard = "0.15.0"
futures-util = "0.3"
ratatui = "0.26"
crossterm = "0.27"

[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = { version = "0.10.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.24.0", optional = true }
metal = { version = "0.27.0", features = ["private"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
dxgi = { version = "0.3.0-alpha4", optional = true }
winapi = { version = "0.3", features = ["dxgi", "d3dcommon"], optional = true }
windows = { version = "0.48", features = ["Win32_Graphics_Dxgi"] }

[features]
default = ["metal"]
metal = ["dep:core-graphics", "dep:metal"]
windows = ["dep:dxgi", "winapi"]

[[bin]]
name = "gpu-share-vm-manager"
path = "src/main.rs"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
